--- a/app/src/main/res/layout/layout_top_tabs.xml
+++ b/app/src/main/res/layout/layout_top_tabs.xml
@@ -8,7 +8,7 @@
 
         <android.support.design.widget.AppBarLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="match_parent">
 
             <android.support.design.widget.TabLayout
                 android:id="@+id/tabs"
