--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -22,6 +22,7 @@ kami sekarang!"
             android:layout_marginTop="250dp"/>
 
         <Button
+            android:id="@+id/btnCoba"
             android:layout_width="wrap_content"
             android:layout_height="50dp"
             android:layout_below="@id/txtCoba"
