--- a/app/src/main/res/layout/user_layout.xml
+++ b/app/src/main/res/layout/user_layout.xml
@@ -8,11 +8,16 @@
     android:layout_margin="16dp"
     >
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:orientation="horizontal"
+        android:weightSum="10"
+        android:layout_gravity="center_vertical"
+        android:padding="16dp">
 
         <TextView
+            android:layout_marginTop="12dp"
             android:id="@+id/txtUsername"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -20,7 +25,8 @@
             android:textColor="@android:color/black"
             android:textSize="24sp"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="20dp"/>
+            android:layout_marginLeft="20dp"
+            android:layout_weight="8" />
 
         <ImageView
             android:layout_width="50dp"
@@ -29,6 +35,6 @@
             android:layout_toRightOf="@id/txtUsername"
             android:layout_centerVertical="true"
             android:layout_marginLeft="60dp"/>
-    </RelativeLayout>
+    </LinearLayout>
 
 </android.support.v7.widget.CardView>
