--- a/app/src/main/res/layout/user_layout.xml
+++ b/app/src/main/res/layout/user_layout.xml
@@ -8,13 +8,9 @@
     android:layout_margin="16dp"
     >
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal"
-        android:weightSum="10"
-        android:layout_gravity="center_vertical"
-        android:padding="16dp">
+        android:layout_height="match_parent">
 
         <TextView
             android:layout_marginTop="12dp"
@@ -25,8 +21,7 @@
             android:textColor="@android:color/black"
             android:textSize="24sp"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="20dp"
-            android:layout_weight="8" />
+            android:layout_marginLeft="20dp" />
 
         <ImageView
             android:layout_width="50dp"
@@ -35,6 +30,6 @@
             android:layout_toRightOf="@id/txtUsername"
             android:layout_centerVertical="true"
             android:layout_marginLeft="60dp"/>
-    </LinearLayout>
+    </RelativeLayout>
 
 </android.support.v7.widget.CardView>
