--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -1,25 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/colorPrimary"
-        android:layout_marginBottom="50dp">
-
+    android:layout_height="match_parent"
+    android:background="@color/colorPrimary"
+    android:layout_marginBottom="50dp">
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="25sp"
+            android:id="@+id/txtCoba"
+            android:layout_width="271dp"
+            android:layout_height="0dp"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="155dp"
             android:text="Coba fitur pelacak siswa
 kami sekarang!"
             android:textAlignment="center"
             android:textColor="@android:color/white"
-            android:layout_centerHorizontal="true"
-            android:id="@+id/txtCoba"
-            android:layout_marginTop="250dp"/>
+            android:textSize="25sp"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginRight="8dp"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginLeft="8dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintHorizontal_bias="0.505" />
 
         <Button
             android:id="@+id/btnCoba"
@@ -28,7 +31,11 @@ kami sekarang!"
             android:layout_below="@id/txtCoba"
             android:layout_centerHorizontal="true"
             android:text="Coba"
-            android:textColor="@color/colorPrimary"/>
-    </RelativeLayout>
-
-</RelativeLayout>
+            android:textColor="@color/colorPrimary"
+            android:layout_marginRight="8dp"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginLeft="8dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/txtCoba" />
+</android.support.constraint.ConstraintLayout>
